--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div class="app-wrapper">
-      <!-- Шкала коэффициентов -->
       <div class="scale-bar">
         <div class="scale-line">
           <div class="scale-fill" id="scaleFill"></div>
@@ -30,44 +29,29 @@
       <div class="game-container">
         <img src="bg_jpg-1.png" alt="Background" class="background" />
 
-        <!-- Цели -->
+        <!-- Круги -->
         <div class="circle circle-tl">
-          <img src="circle_ball.png" alt="circle" /><img
-            class="ball"
-            src="target_ball.png"
-            alt="ball"
-          />
+          <img src="circle_ball.png" />
+          <img class="ball" src="target_ball.png" />
         </div>
         <div class="circle circle-top">
-          <img src="circle_ball.png" alt="circle" /><img
-            class="ball"
-            src="target_ball.png"
-            alt="ball"
-          />
+          <img src="circle_ball.png" />
+          <img class="ball" src="target_ball.png" />
         </div>
         <div class="circle circle-tr">
-          <img src="circle_ball.png" alt="circle" /><img
-            class="ball"
-            src="target_ball.png"
-            alt="ball"
-          />
+          <img src="circle_ball.png" />
+          <img class="ball" src="target_ball.png" />
         </div>
         <div class="circle circle-bl">
-          <img src="circle_ball.png" alt="circle" /><img
-            class="ball"
-            src="target_ball.png"
-            alt="ball"
-          />
+          <img src="circle_ball.png" />
+          <img class="ball" src="target_ball.png" />
         </div>
         <div class="circle circle-br">
-          <img src="circle_ball.png" alt="circle" /><img
-            class="ball"
-            src="target_ball.png"
-            alt="ball"
-          />
+          <img src="circle_ball.png" />
+          <img class="ball" src="target_ball.png" />
         </div>
 
-        <!-- Стрелки вокруг круга -->
+        <!-- Стрелки -->
         <div class="arrows" id="arrows">
           <img class="arrow arrow-top" src="triangle.png" />
           <img class="arrow arrow-bottom" src="triangle.png" />
@@ -75,17 +59,18 @@
           <img class="arrow arrow-right" src="triangle.png" />
         </div>
 
-        <!-- Вратарь -->
-        <img src="goalkeeper_1.png" alt="Goalkeeper" class="goalkeeper" />
+        <img src="goalkeeper_1.png" class="goalkeeper" />
 
-        <!-- Кнопка Прогноз -->
-        <div class="play-button" onclick="startPrediction()">
-          <img src="play.png" alt="Play Button" />
-          <span class="play-text">Прогноз</span>
+        <!-- Кнопки -->
+        <div class="control-buttons">
+          <button id="nextStepBtn" onclick="nextStep()">
+            ▶ Получить сигнал
+          </button>
+          <button onclick="resetGame()">Сигнал</button>
+          <button onclick="location.href='https://example.com'">Играть</button>
         </div>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
